--- a/style.css
+++ b/style.css
@@ -26,10 +26,19 @@
      justify-content: space-around; /* Center items horizontally */
      
  }
- li {
+ div li {
      margin-bottom: 10px;
+     border-radius: 5px;
+     border-width: 2px;
+     border-color: black;
+     border-style:solid;
+     padding: 3px;
+     width: 150px;
  }
+
  a {
      color: #fff;
      text-decoration: none;
  }
+
+ 
